--- a/index.html
+++ b/index.html
@@ -79,83 +79,85 @@
 
       <!-- Vista escritorio -->
       <div class="row align-items-center gx-0 d-none d-sm-flex">
-        <div class="col-sm-1">
+        <!-- Menú + Buscar -->
+        <div class="col-sm-4 d-flex align-items-center gap-3 ps-3">
           <!-- Botón Hamburguesa -->
-          <nav class="navbar navbar-light">
-            <div class="container-fluid p-0">
-              <button
-                class="navbar-toggler border-0"
-                type="button"
-                data-bs-toggle="offcanvas"
-                data-bs-target="#offcanvasNavbar"
-                aria-controls="offcanvasNavbar"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-            </div>
-          </nav>
-        </div>
+          <div class="d-flex align-items-center">
+            <button
+              class="navbar-toggler border-0 p-0"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#offcanvasNavbar"
+              aria-controls="offcanvasNavbar"
+              aria-label="Toggle navigation"
+            >
+              <i class="bi bi-list fs-2 icon-hamburguesa"></i>
+            </button>
+          </div>
 
-        <div class="col-sm-3 p-2 position-relative">
-          <button
-            class="btn btn-outline-primary d-flex align-items-center"
-            type="button"
-            id="btnMostrarBusqueda"
-          >
-            <i class="bi bi-search me-2"></i> Buscar
-          </button>
+          <!-- Línea separadora -->
+          <div class="border-end" style="height: 25px"></div>
 
-          <!-- Barra desplegable -->
-          <div class="d-none" id="barraBusqueda">
-            <div class="input-group">
-              <span class="input-group-text"><i class="bi bi-search"></i></span>
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Buscar productos..."
-              />
+          <!-- Botón Buscar -->
+          <div class="position-relative w-100" style="max-width: 600px">
+            <button
+              class="btn btn-outline-primary d-flex align-items-center"
+              type="button"
+              id="btnMostrarBusqueda"
+            >
+              <i class="bi bi-search me-1"></i> Buscar
+            </button>
+
+            <!-- Barra desplegable -->
+            <div class="d-none" id="barraBusqueda">
+              <div class="input-group mt-2">
+                <span class="input-group-text"
+                  ><i class="bi bi-search"></i
+                ></span>
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Buscar productos..."
+                />
+              </div>
             </div>
           </div>
         </div>
 
+        <!-- Título -->
         <div class="col-sm-4 text-center">
-          <!-- Título -->
           <h1 class="fs-2 m-0">Plantas y Raíces</h1>
           <p class="fs-6 m-0">Hogar de plantas y jardinería</p>
         </div>
 
-        <div class="col-sm-4 d-flex justify-content-end align-items-center p-3">
-          <!-- Iniciar sesión -->
-          <!-- Botón para abrir el offcanvas de inicio de sesión -->
-          <div class="col-auto">
+        <!-- Iniciar sesión + Carrito -->
+        <div class="col-sm-4">
+          <div class="d-flex justify-content-end align-items-center gap-3 pe-3">
+            <!-- Iniciar sesión -->
             <button
-              class="btn d-flex align-items-center"
+              class="btn btn-sm d-flex align-items-center"
               type="button"
               data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasLogin"
               aria-controls="offcanvasLogin"
             >
               <i class="bi bi-person-circle me-1"></i>
-              <span class="d-none d-md-inline"
-                >Iniciar sesión / Registrarse</span
-              >
+              <span class="d-none d-lg-inline">Iniciar sesión</span>
             </button>
-          </div>
 
-          <!-- Carrito -->
-          <!-- Botón para abrir el offcanvas de carrito -->
-          |
-          <div class="col-auto text-end">
+            <!-- Línea separadora -->
+            <div class="border-start" style="height: 25px"></div>
+
+            <!-- Carrito -->
             <button
-              class="btn d-flex align-items-center"
+              class="btn btn-sm d-flex align-items-center"
               type="button"
               data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasCar"
               aria-controls="offcanvasCar"
             >
               <i class="bi bi-cart fs-5"></i>
-              <span class="d-none d-md-inline ms-1">Carrito</span>
+              <span class="d-none d-lg-inline ms-1">Carrito</span>
             </button>
           </div>
         </div>
@@ -185,13 +187,13 @@
             <a class="nav-link active" aria-current="page" href="#">Catalogo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Consejos</a>
+            <a class="nav-link" href="consejos.html">Consejos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Sobre nosotros</a>
+            <a class="nav-link" href="sobreNosotros.html">Sobre nosotros</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Contacto</a>
+            <a class="nav-link" href="contacto.html">Contacto</a>
           </li>
         </ul>
       </div>
@@ -310,6 +312,7 @@
     </div>
 
     <!-- Carrusel -->
+    <!--
     <div class="container-fluid p-0 mt-0">
       <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
@@ -379,16 +382,120 @@
         </button>
       </div>
     </div>
+-->
+
+    <!-- Sección de Promociones -->
+    <div class="container-fluid my-5">
+      <div class="row">
+        <div class="col-12 text-center mb-4">
+          <h2 class="fw-bold" style="color: var(--verde-principal)">
+            PROMOCIONES ESPECIALES
+          </h2>
+          <div class="countdown-timer bg-light p-2 rounded d-inline-block">
+            <span class="fw-bold text-danger">Oferta termina en:</span>
+            <span id="countdown" class="fw-bold">04:27:25</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <!-- Cambio clave aquí -->
+        <!-- Producto en promoción 1 -->
+        <div class="col">
+          <div class="card h-100 promotion-card" data-id="101">
+            <span
+              class="position-absolute top-0 start-0 bg-danger text-white px-2 py-1 m-2 rounded"
+              >-25%</span
+            >
+            <img
+              src="img/Helecho nido de pájaro.webp"
+              class="card-img-top product-img"
+              alt="Producto en promoción"
+            />
+            <div class="card-body product-info">
+              <h5 class="product-title">Helecho nido de pájaro</h5>
+              <div class="product-text">
+                <span class="text-muted text-decoration-line-through"
+                  >$38.486</span
+                >
+                <span class="fw-bold text-danger product-price">$11.486</span>
+              </div>
+              <button class="btn btn-success product-button mt-2 w-100">
+                <i class="bi bi-cart-plus"></i> Agregar
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Producto en promoción 2 -->
+        <div class="col">
+          <div class="card h-100 promotion-card" data-id="102">
+            <span
+              class="position-absolute top-0 start-0 bg-danger text-white px-2 py-1 m-2 rounded"
+              >-15%</span
+            >
+            <img
+              src="img/Sansevieria.webp"
+              class="card-img-top product-img"
+              alt="Producto en promoción"
+            />
+            <div class="card-body product-info">
+              <h5 class="product-title">Bejequillo tinerfeño</h5>
+              <div class="product-text">
+                <span class="text-muted text-decoration-line-through"
+                  >$60.476</span
+                >
+                <span class="fw-bold text-danger product-price">$65.586</span>
+              </div>
+              <button class="btn btn-success product-button mt-2 w-100">
+                <i class="bi bi-cart-plus"></i> Agregar
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Producto en promoción 3 -->
+        <div class="col">
+          <div class="card h-100 promotion-card" data-id="103">
+            <span
+              class="position-absolute top-0 start-0 bg-danger text-white px-2 py-1 m-2 rounded"
+              >-30%</span
+            >
+            <img
+              src="img/Sedum erizo de mar.webp"
+              class="card-img-top product-img"
+              alt="Producto en promoción"
+            />
+            <div class="card-body product-info">
+              <h5 class="product-title">Anacampseros rufescens</h5>
+              <div class="product-text">
+                <span class="text-muted text-decoration-line-through"
+                  >$60.368</span
+                >
+                <span class="fw-bold text-danger product-price">$34.846</span>
+              </div>
+              <button class="btn btn-success product-button mt-2 w-100">
+                <i class="bi bi-cart-plus"></i> Agregar
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- Cards de Productos -->
     <div class="container-fluid my-5">
       <div class="grid-cards">
         <div class="card" data-id="1">
-          <img src="img/violas.webp" alt="Violas" class="product-img" />
+          <img
+            src="img/Anturio(Flor del amor).webp"
+            alt="Anturio"
+            class="product-img"
+          />
           <div class="product-info">
             <div class="product-text">
-              <div class="product-title">Violas Decorativas</div>
-              <div class="product-price">$60.000</div>
+              <div class="product-title">Anturio(Flor del amor)</div>
+              <div class="product-price">$42.900</div>
             </div>
             <button class="product-button btn-agregar">
               Agregar al carrito
@@ -397,10 +504,14 @@
         </div>
 
         <div class="card" data-id="2">
-          <img src="img/violas.webp" alt="Violas" class="product-img" />
+          <img
+            src="img/Cerezo de Natal.webp"
+            alt="Cerezo de Natal"
+            class="product-img"
+          />
           <div class="product-info">
             <div class="product-text">
-              <div class="product-title">Violas Decorativas</div>
+              <div class="product-title">Cerezo de Natal</div>
               <div class="product-price">$60.000</div>
             </div>
             <button class="product-button btn-agregar">
@@ -410,11 +521,15 @@
         </div>
 
         <div class="card" data-id="3">
-          <img src="img/violas.webp" alt="Violas" class="product-img" />
+          <img
+            src="img/Filodendro Birkin.webp"
+            alt="Filodendro"
+            class="product-img"
+          />
           <div class="product-info">
             <div class="product-text">
-              <div class="product-title">Violas Decorativas</div>
-              <div class="product-price">$60.000</div>
+              <div class="product-title">Filodendro Birkin</div>
+              <div class="product-price">$72.000</div>
             </div>
             <button class="product-button btn-agregar">
               Agregar al carrito
@@ -423,11 +538,15 @@
         </div>
 
         <div class="card" data-id="4">
-          <img src="img/violas.webp" alt="Violas" class="product-img" />
+          <img
+            src="img/Lengua de suegra.webp"
+            alt="Lengua de suegra"
+            class="product-img"
+          />
           <div class="product-info">
             <div class="product-text">
-              <div class="product-title">Violas Decorativas</div>
-              <div class="product-price">$60.000</div>
+              <div class="product-title">Lengua de suegra</div>
+              <div class="product-price">$36.900</div>
             </div>
             <button class="product-button btn-agregar">
               Agregar al carrito
@@ -435,55 +554,125 @@
           </div>
         </div>
 
-        <div class="card">
-          <img src="img/violas.webp" alt="Producto" class="product-img" />
-
+        <div class="card" data-id="5">
+          <img
+            src="img/Meloncito de jardín.webp"
+            alt="Meloncito de jardín"
+            class="product-img"
+          />
           <div class="product-info">
             <div class="product-text">
-              <div class="product-title">Nombre del producto</div>
-              <div class="product-price">$60.000</div>
+              <div class="product-title">Meloncito de jardín</div>
+              <div class="product-price">$30.000</div>
             </div>
-
-            <button class="product-button">Agregar al carrito</button>
+            <button class="product-button btn-agregar">
+              Agregar al carrito
+            </button>
           </div>
         </div>
 
-        <div class="card">
-          <img src="img/violas.webp" alt="Producto" class="product-img" />
-
+        <div class="card" data-id="6">
+          <img
+            src="img/Monstera deliciosa.webp"
+            alt="Monstera deliciosa"
+            class="product-img"
+          />
           <div class="product-info">
             <div class="product-text">
-              <div class="product-title">Nombre del producto</div>
-              <div class="product-price">$60.000</div>
+              <div class="product-title">Monstera deliciosa</div>
+              <div class="product-price">$58.000</div>
             </div>
-
-            <button class="product-button">Agregar al carrito</button>
+            <button class="product-button btn-agregar">
+              Agregar al carrito
+            </button>
           </div>
         </div>
 
-        <div class="card">
-          <img src="img/violas.webp" alt="Producto" class="product-img" />
-
+        <div class="card" data-id="7">
+          <img
+            src="img/Pacaya(Palmera de salón).webp"
+            alt="Palmera de salón"
+            class="product-img"
+          />
           <div class="product-info">
             <div class="product-text">
-              <div class="product-title">Nombre del producto</div>
-              <div class="product-price">$60.000</div>
+              <div class="product-title">Pacaya(Palmera de salón)</div>
+              <div class="product-price">$175.000</div>
             </div>
+            <button class="product-button btn-agregar">
+              Agregar al carrito
+            </button>
+          </div>
+        </div>
 
-            <button class="product-button">Agregar al carrito</button>
+        <div class="card" data-id="8">
+          <img
+            src="img/Peperomia(Pimienta de tierra, Planta de jade).webp"
+            alt="Peperomia"
+            class="product-img"
+          />
+          <div class="product-info">
+            <div class="product-text">
+              <div class="product-title">Peperomia(Pimienta de tierra)</div>
+              <div class="product-price">$14.900</div>
+            </div>
+            <button class="product-button btn-agregar">
+              Agregar al carrito
+            </button>
+          </div>
+        </div>
+
+        <div class="card" data-id="9">
+          <img
+            src="img/Philodendron Green Fatboy.webp"
+            alt="Philodendron Green Fatboy"
+            class="product-img"
+          />
+          <div class="product-info">
+            <div class="product-text">
+              <div class="product-title">Philodendron Green Fatboy</div>
+              <div class="product-price">$10.000</div>
+            </div>
+            <button class="product-button btn-agregar">
+              Agregar al carrito
+            </button>
+          </div>
+        </div>
+
+        <div class="card" data-id="10">
+          <img
+            src="img/Planta de la oración de espina de pescado.webp"
+            alt="Planta de la oración de espina de pescado"
+            class="product-img"
+          />
+          <div class="product-info">
+            <div class="product-text">
+              <div class="product-title">
+                Planta de la oración de espina de pescado
+              </div>
+              <div class="product-price">$44.222</div>
+            </div>
+            <button class="product-button btn-agregar">
+              Agregar al carrito
+            </button>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Footer -->
-    <footer>
-      <div class="container-fluid p-5 text-center">
-        <div class="row">
+    <footer style="background-color: var(--marron); color: white">
+      <div class="container-fluid text-center py-4">
+        <div class="row mb-2">
           <div class="col-12">
-            <a href="#" class="text-decoration-none">Síguenos en Instagram</a>
+            <a href="#" class="text-white text-decoration-none me-3">
+              <i class="bi bi-instagram"></i> Instagram
+            </a>
+            <a href="#" class="text-white text-decoration-none me-3">
+              <i class="bi bi-facebook"></i> Facebook
+            </a>
           </div>
         </div>
+        <p class="mb-0">&copy; 2025. Todos los derechos reservados.</p>
       </div>
     </footer>
 
