--- a/contacto.html
+++ b/contacto.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <!-- Encabezado -->
-    <div class="container-fluid text-center py-2">
+    <div class="container-fluid text-center pt-0 pt-sm-0 pb-2">
       <!-- Vista móvil -->
       <div class="row align-items-center d-sm-none gx-2">
         <!-- Menú hamburguesa -->
-        <div class="col-2">
+        <div class="col-1">
           <nav class="navbar navbar-light p-0">
             <button
               class="navbar-toggler border-0 bg-transparent p-0"
@@ -30,15 +30,15 @@
         </div>
 
         <!-- Barra de búsqueda simple -->
-        <div class="col-7">
-          <div class="input-group input-group-sm">
+        <div class="col-8 ps-3 py-2">
+          <div class="input-group search-bar-mobile">
             <input
               type="text"
               class="form-control"
               placeholder="Buscar..."
               aria-label="Buscar"
             />
-            <button class="btn btn-outline-secondary" type="button">
+            <button class="btn btn-search" type="button">
               <i class="bi bi-search"></i>
             </button>
           </div>
@@ -77,87 +77,100 @@
       </div>
 
       <!-- Vista escritorio -->
-      <div class="row align-items-center gx-0 d-none d-sm-flex">
-        <!-- Menú + Buscar -->
-        <div class="col-sm-4 d-flex align-items-center gap-3 ps-3">
-          <!-- Botón Hamburguesa -->
-          <div class="d-flex align-items-center">
+
+      <div class="row d-none d-sm-block">
+        <nav class="navbar navbar-expand-sm bg-body-tertiary">
+          <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Catalogo</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="consejos.html">Consejos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="sobreNosotros.html"
+                    >Sobre nosotros</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Contacto</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+
+      <!-- CONTENEDOR RELATIVO PARA EL BOTÓN Y LA BARRA -->
+      <div class="position-relative">
+        <!-- Fila superior -->
+        <div class="row align-items-center gx-0 d-none d-sm-flex">
+          <!-- Botón de búsqueda -->
+          <div class="col-sm-4 d-flex align-items-center ps-3">
             <button
-              class="navbar-toggler border-0 p-0"
-              type="button"
-              data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasNavbar"
-              aria-controls="offcanvasNavbar"
-              aria-label="Toggle navigation"
+              class="btn btn-outline-secondary btn-sm"
+              id="btnToggleBusqueda"
             >
-              <i class="bi bi-list fs-2 icon-hamburguesa"></i>
+              <i class="bi bi-search"></i>
+              <span class="d-none d-md-inline">Buscar</span>
             </button>
           </div>
 
-          <!-- Línea separadora -->
-          <div class="border-end" style="height: 25px"></div>
+          <!-- Título -->
+          <div class="col-sm-4 text-center">
+            <h1 class="fs-1 m-0 fw-bold">Plantas y Raíces</h1>
+            <p class="fs-6 m-0">Hogar de plantas y jardinería</p>
+          </div>
 
-          <!-- Botón Buscar -->
-          <div class="position-relative w-100" style="max-width: 600px">
-            <button
-              class="btn btn-outline-primary d-flex align-items-center"
-              type="button"
-              id="btnMostrarBusqueda"
+          <!-- Iniciar sesión y carrito -->
+          <div class="col-sm-4">
+            <div
+              class="d-flex justify-content-end align-items-center gap-3 pe-3"
             >
-              <i class="bi bi-search me-1"></i> Buscar
-            </button>
+              <button
+                class="btn btn-sm d-flex align-items-center"
+                type="button"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasLogin"
+                aria-controls="offcanvasLogin"
+              >
+                <i class="bi bi-person-circle me-1"></i>
+                <span class="d-none d-lg-inline">Iniciar sesión</span>
+              </button>
 
-            <!-- Barra desplegable -->
-            <div class="d-none" id="barraBusqueda">
-              <div class="input-group mt-2">
-                <span class="input-group-text"
-                  ><i class="bi bi-search"></i
-                ></span>
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Buscar productos..."
-                />
-              </div>
+              <div class="border-start" style="height: 25px"></div>
+
+              <button
+                class="btn btn-sm d-flex align-items-center"
+                type="button"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasCar"
+                aria-controls="offcanvasCar"
+              >
+                <i class="bi bi-cart fs-5"></i>
+                <span class="d-none d-lg-inline ms-1">Carrito</span>
+              </button>
             </div>
           </div>
         </div>
 
-        <!-- Título -->
-        <div class="col-sm-4 text-center">
-          <h1 class="fs-2 m-0">Plantas y Raíces</h1>
-          <p class="fs-6 m-0">Hogar de plantas y jardinería</p>
-        </div>
-
-        <!-- Iniciar sesión + Carrito -->
-        <div class="col-sm-4">
-          <div class="d-flex justify-content-end align-items-center gap-3 pe-3">
-            <!-- Iniciar sesión -->
-            <button
-              class="btn btn-sm d-flex align-items-center"
-              type="button"
-              data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasLogin"
-              aria-controls="offcanvasLogin"
-            >
-              <i class="bi bi-person-circle me-1"></i>
-              <span class="d-none d-lg-inline">Iniciar sesión</span>
-            </button>
-
-            <!-- Línea separadora -->
-            <div class="border-start" style="height: 25px"></div>
-
-            <!-- Carrito -->
-            <button
-              class="btn btn-sm d-flex align-items-center"
-              type="button"
-              data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasCar"
-              aria-controls="offcanvasCar"
-            >
-              <i class="bi bi-cart fs-5"></i>
-              <span class="d-none d-lg-inline ms-1">Carrito</span>
-            </button>
+        <!-- BARRA DE BÚSQUEDA DESPLEGABLE -->
+        <div
+          id="barraBusquedaExpandida"
+          class="position-absolute start-0 w-100 bg-white border-bottom shadow-sm d-none z-3"
+        >
+          <div class="d-flex align-items-center gap-2 px-3 py-2 w-100">
+            <i class="bi bi-search icono-lupa"></i>
+            <input
+              type="text"
+              class="barra-input"
+              placeholder="Busque productos aquí…"
+              aria-label="Buscar"
+            />
           </div>
         </div>
       </div>
@@ -305,7 +318,7 @@
     <div class="container-fluid text-center my-0 py-0 bg-light">
       <div class="row">
         <div class="col-12">
-          <p class="fs-5 fs-md-4 fs-lg-3 my-1 banner-text">
+          <p class="fs-6 fs-md-4 fs-lg-3 my-1 banner-text">
             Jardinería, plantas y decoración para tu hogar
           </p>
         </div>
@@ -314,9 +327,7 @@
 
     <!-- Contenido principal -->
     <div class="container my-5">
-      <h2 class="text-center mb-4" style="color: var(--verde-principal)">
-        Contáctanos
-      </h2>
+      <h2 class="text-center mb-4">Contáctanos</h2>
 
       <form>
         <div class="mb-3">
